# AlgGeneration

./: .gitignore  CMakeLists.txt  README.md  clean.sh  cleanMerge.sh  configure.sh  install.sh  reset.sh
src/: CMakeLists.txt
src/cmake/: functions.cmake  init.cmake
src/libGen/: CMakeLists.txt
src/libGen/alggen/base/: all.hpp  function.cpp  function.hpp  incrementalfunction.cpp  model.cpp  model.hpp  mutation.cpp  mutation.hpp  neighborhood.cpp  searchalgorithm.cpp  searchalgorithm.hpp  solution.cpp  solution.hpp
src/libGen/alggen/neighborhood/: nkseedmutation.cpp  nkseedmutation.hpp  oneflip.cpp  oneflip.hpp  seedmutation.cpp  seedmutation.hpp
src/libGen/alggen/problem/: nk.cpp  nk.hpp  onemax.cpp  onemax.hpp
src/libGen/alggen/searchalgorithm/: iteratedlocalsearch.cpp  iteratedlocalsearch.hpp  localsearch.cpp  localsearch.hpp  searchalgorithm.cpp  searchalgorithm.hpp
src/libGen/alggen/selection/: tournamentselection.cpp  tournamentselection.hpp
src/libGen/alggen/solution/: bitstring.cpp  bitstring.hpp  nkmodel.cpp  nkmodel.hpp
src/libGen/alggen/utils/: drawwithoutreplacement.cpp  drawwithoutreplacement.hpp
src/libGen/base/: all.hpp  function.cpp  function.hpp  incrementalfunction.cpp  incrementalfunction.hpp  mutation.cpp  mutation.hpp  neighborhood.cpp  neighborhood.hpp  solution.cpp  solution.hpp
src/programs/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/base/: test-libgen-base.cpp  testclasses.cpp  testclasses.hpp
src/tests/libtest/: test.cpp  test.hpp
src/tests/problem/: test-libgen-problem.cpp
src/tests/regtests/: test-regtests.cpp
src/tests/regtests/test_files/: nk_128_1.0  nk_128_1.optimum_solution
src/tests/solution/: test-libgen-solution.cpp
